感想を追加

--- a/感想.md
+++ b/感想.md
@@ -45,3 +45,9 @@
 <blockquote class="twitter-tweet"><p lang="ja" dir="ltr">今日は <a href="https://twitter.com/koshian2?ref_src=twsrc%5Etfw">@koshian2</a> さんのモザイク除去本chapt6.1<br><br>白い線を消して画像を作る．金属などのストリークアーチファクトに使えると良いが，ボケが大きい．この辺はもっと研究が必要．最終PSNRは24.94<br>こんなのがすぐにできるので，やってみたい人は買うしかない <a href="https://t.co/jy6SexKKVy">pic.twitter.com/jy6SexKKVy</a></p>&mdash; a.yam (@yachts111xenon) <a href="https://twitter.com/yachts111xenon/status/1241601241697771527?ref_src=twsrc%5Etfw">March 22, 2020</a></blockquote> 
 
 <blockquote class="twitter-tweet"><p lang="ja" dir="ltr">こ、これがモザイク除去… <a href="https://t.co/darZcPsI0D">pic.twitter.com/darZcPsI0D</a></p>&mdash; roi (@dust_party) <a href="https://twitter.com/dust_party/status/1238675351519125504?ref_src=twsrc%5Etfw">March 14, 2020</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="ja" dir="ltr">あ、booth経由で注文したものですが、本届きました!予想以上にデカい。それと紙質いいですね。少しの間キュキュキュとやってました。</p>&mdash; sk (@xingogo1989) <a href="https://twitter.com/xingogo1989/status/1248542213656547328?ref_src=twsrc%5Etfw">April 10, 2020</a></blockquote>
+
+<blockquote class="twitter-tweet"><p lang="und" dir="ltr"><a href="https://t.co/VLxo84ptnr">pic.twitter.com/VLxo84ptnr</a></p>&mdash; hh (@Rbeginner_TDA) <a href="https://twitter.com/Rbeginner_TDA/status/1249166857996767233?ref_src=twsrc%5Etfw">April 12, 2020</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="ja" dir="ltr">お金払ったら分身する本、「モザイク除去から学ぶ　最先端のディープラーニング 」<br><br>モザイク除去から学ぶ　最先端のディープラーニング | じゅ～しぃ～すくりぷと <a href="https://t.co/stZhqmyFE3">https://t.co/stZhqmyFE3</a> <a href="https://twitter.com/hashtag/booth_pm?src=hash&amp;ref_src=twsrc%5Etfw">#booth_pm</a><br>とらのあな通信販売で！ <a href="https://t.co/nsPezmgNqC">https://t.co/nsPezmgNqC</a> <a href="https://t.co/fpOqSaELhu">https://t.co/fpOqSaELhu</a></p>&mdash; hh (@Rbeginner_TDA) <a href="https://twitter.com/Rbeginner_TDA/status/1249167404774633476?ref_src=twsrc%5Etfw">April 12, 2020</a></blockquote>
