在庫状況・感想の追加

--- a/感想.md
+++ b/感想.md
@@ -51,3 +51,8 @@
 <blockquote class="twitter-tweet"><p lang="und" dir="ltr"><a href="https://t.co/VLxo84ptnr">pic.twitter.com/VLxo84ptnr</a></p>&mdash; hh (@Rbeginner_TDA) <a href="https://twitter.com/Rbeginner_TDA/status/1249166857996767233?ref_src=twsrc%5Etfw">April 12, 2020</a></blockquote> 
 
 <blockquote class="twitter-tweet"><p lang="ja" dir="ltr">お金払ったら分身する本、「モザイク除去から学ぶ　最先端のディープラーニング 」<br><br>モザイク除去から学ぶ　最先端のディープラーニング | じゅ～しぃ～すくりぷと <a href="https://t.co/stZhqmyFE3">https://t.co/stZhqmyFE3</a> <a href="https://twitter.com/hashtag/booth_pm?src=hash&amp;ref_src=twsrc%5Etfw">#booth_pm</a><br>とらのあな通信販売で！ <a href="https://t.co/nsPezmgNqC">https://t.co/nsPezmgNqC</a> <a href="https://t.co/fpOqSaELhu">https://t.co/fpOqSaELhu</a></p>&mdash; hh (@Rbeginner_TDA) <a href="https://twitter.com/Rbeginner_TDA/status/1249167404774633476?ref_src=twsrc%5Etfw">April 12, 2020</a></blockquote>
+
+<blockquote class="twitter-tweet"><p lang="ja" dir="ltr">旧版しか持ってなかったことに気づいて、新しいの買ってみた。信じられないくらい充実した中身で驚いた…そこらの本より100倍くらい濃くて実践的。これで勉強し直します &gt; モザイク除去から学ぶ　最先端のディープラーニング | じゅ～しぃ～すくりぷと <a href="https://t.co/NIE28nb9JN">https://t.co/NIE28nb9JN</a> <a href="https://twitter.com/hashtag/booth_pm?src=hash&amp;ref_src=twsrc%5Etfw">#booth_pm</a></p>&mdash; からあげ (@karaage0703) <a href="https://twitter.com/karaage0703/status/1249873712255397889?ref_src=twsrc%5Etfw">April 14, 2020</a></blockquote>
+
+<blockquote class="twitter-tweet"><p lang="ja" dir="ltr">こしあんさんの本、ひととおり読んだ。商業出版以上のクオリティで、これを３か月で書けるとか意味わからん<br><br>ttps://booth.pm/ja/items/1835219 （表示があれなので）</p>&mdash; threecourse (@threecourse) <a href="https://twitter.com/threecourse/status/1249710106230448138?ref_src=twsrc%5Etfw">April 13, 2020</a></blockquote>
+
