在庫状況・感想の追加

--- a/感想.md
+++ b/感想.md
@@ -56,3 +56,6 @@
 
 <blockquote class="twitter-tweet"><p lang="ja" dir="ltr">こしあんさんの本、ひととおり読んだ。商業出版以上のクオリティで、これを３か月で書けるとか意味わからん<br><br>ttps://booth.pm/ja/items/1835219 （表示があれなので）</p>&mdash; threecourse (@threecourse) <a href="https://twitter.com/threecourse/status/1249710106230448138?ref_src=twsrc%5Etfw">April 13, 2020</a></blockquote>
 
+<blockquote class="twitter-tweet"><p lang="ja" dir="ltr">いま、ふと「ディープランニング使えば、モザイクは除去できなくても推測して置き換えれるんじゃね？」って思って検索したら、論文を同人誌で出している人いたので、やはりエロは科学の発展に繋がる<br><br>モザイク除去から学ぶ　最先端のディープラーニング <a href="https://t.co/waia2gpHiX">https://t.co/waia2gpHiX</a> <a href="https://twitter.com/hashtag/booth_pm?src=hash&amp;ref_src=twsrc%5Etfw">#booth_pm</a></p>&mdash; kinari (@dodouru) <a href="https://twitter.com/dodouru/status/1252034751587692545?ref_src=twsrc%5Etfw">April 20, 2020</a></blockquote>
+
+<blockquote class="twitter-tweet"><p lang="ja" dir="ltr">モザイク除去本、データクレンジングステップが事細かやか記載されてて関心すると同時に爆笑してる</p>&mdash; ふぁむたろう (@fam_taro) <a href="https://twitter.com/fam_taro/status/1254288427631079426?ref_src=twsrc%5Etfw">April 26, 2020</a></blockquote> 
