感想を追加

--- a/感想.md
+++ b/感想.md
@@ -59,3 +59,15 @@
 <blockquote class="twitter-tweet"><p lang="ja" dir="ltr">いま、ふと「ディープランニング使えば、モザイクは除去できなくても推測して置き換えれるんじゃね？」って思って検索したら、論文を同人誌で出している人いたので、やはりエロは科学の発展に繋がる<br><br>モザイク除去から学ぶ　最先端のディープラーニング <a href="https://t.co/waia2gpHiX">https://t.co/waia2gpHiX</a> <a href="https://twitter.com/hashtag/booth_pm?src=hash&amp;ref_src=twsrc%5Etfw">#booth_pm</a></p>&mdash; kinari (@dodouru) <a href="https://twitter.com/dodouru/status/1252034751587692545?ref_src=twsrc%5Etfw">April 20, 2020</a></blockquote>
 
 <blockquote class="twitter-tweet"><p lang="ja" dir="ltr">モザイク除去本、データクレンジングステップが事細かやか記載されてて関心すると同時に爆笑してる</p>&mdash; ふぁむたろう (@fam_taro) <a href="https://twitter.com/fam_taro/status/1254288427631079426?ref_src=twsrc%5Etfw">April 26, 2020</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="ja" dir="ltr">モザイク本のipynb かなり有能っぽい</p>&mdash; $$$ (@3XCL4M4T10N) <a href="https://twitter.com/3XCL4M4T10N/status/1254021807012638720?ref_src=twsrc%5Etfw">April 25, 2020</a></blockquote>
+
+<blockquote class="twitter-tweet"><p lang="ja" dir="ltr">一通り目を通したけどこれだけのボリュームがまとまってるのはすごいなと思いました（読めたとは言っていない<br><br>あとはこの分野の検索用の単語も散りばめてるのも非常にありがたかったです（小並感 <a href="https://t.co/vza2BlXgEJ">https://t.co/vza2BlXgEJ</a></p>&mdash; ふぁむたろう (@fam_taro) <a href="https://twitter.com/fam_taro/status/1254623265777057795?ref_src=twsrc%5Etfw">April 27, 2020</a></blockquote>
+
+<blockquote class="twitter-tweet"><p lang="ja" dir="ltr">couseraのAI for Medical Diagnosis終了！<br>U-netだったからモザイク本片手に頑張った <a href="https://t.co/U4Li5HGHwo">pic.twitter.com/U4Li5HGHwo</a></p>&mdash; a.yam (@yachts111xenon) <a href="https://twitter.com/yachts111xenon/status/1254683709367705602?ref_src=twsrc%5Etfw">April 27, 2020</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="ja" dir="ltr">モザイク本、Contextual Attention の話が始まり僕の心を摘む闘いが始まった</p>&mdash; ふぁむたろう (@fam_taro) <a href="https://twitter.com/fam_taro/status/1254613855637893121?ref_src=twsrc%5Etfw">April 27, 2020</a></blockquote>
+
+<blockquote class="twitter-tweet"><p lang="ja" dir="ltr">ぜひ今のスタイルを貫いてほしいです。Note読みましたがモザイク除去本は&quot;実践GAN&quot;の10倍くらい自分にはためになりました。続編待ってます！</p>&mdash; 円丸(えんまる) (@enmaru_) <a href="https://twitter.com/enmaru_/status/1256996354989019136?ref_src=twsrc%5Etfw">May 3, 2020</a></blockquote>
+
+<blockquote class="twitter-tweet"><p lang="ja" dir="ltr">「モザイク除去から学ぶ　最先端のディープラーニング」来た。同人誌のレベルじゃない。かなりヘビーだけどがんばればついていける感じ。最近の論文を紹介してるのがうれしい</p>&mdash; yadokarielectric (@yadokarielectri) <a href="https://twitter.com/yadokarielectri/status/1257593149075013632?ref_src=twsrc%5Etfw">May 5, 2020</a></blockquote>
