メロブの委託を追加

--- a/感想.md
+++ b/感想.md
@@ -71,3 +71,6 @@
 <blockquote class="twitter-tweet"><p lang="ja" dir="ltr">ぜひ今のスタイルを貫いてほしいです。Note読みましたがモザイク除去本は&quot;実践GAN&quot;の10倍くらい自分にはためになりました。続編待ってます！</p>&mdash; 円丸(えんまる) (@enmaru_) <a href="https://twitter.com/enmaru_/status/1256996354989019136?ref_src=twsrc%5Etfw">May 3, 2020</a></blockquote>
 
 <blockquote class="twitter-tweet"><p lang="ja" dir="ltr">「モザイク除去から学ぶ　最先端のディープラーニング」来た。同人誌のレベルじゃない。かなりヘビーだけどがんばればついていける感じ。最近の論文を紹介してるのがうれしい</p>&mdash; yadokarielectric (@yadokarielectri) <a href="https://twitter.com/yadokarielectri/status/1257593149075013632?ref_src=twsrc%5Etfw">May 5, 2020</a></blockquote>
+
+<blockquote class="twitter-tweet"><p lang="ja" dir="ltr">こういうの機械学習始めたころの初心思い出すな<br>「モザイク除去から学ぶ　最先端のディープラーニング (書籍版（A4・195ページ　一部カラー）＋電子版（フルカラー・すぐDL可）)」を じゅ～しぃ～すくりぷと で購入しました！ <a href="https://t.co/709cpMu8NN">https://t.co/709cpMu8NN</a> <a href="https://twitter.com/hashtag/booth_pm?src=hash&amp;ref_src=twsrc%5Etfw">#booth_pm</a></p>&mdash; きしもと (@unpuy_tw) <a href="https://twitter.com/unpuy_tw/status/1258688441539125249?ref_src=twsrc%5Etfw">May 8, 2020</a></blockquote> 
+
