感想を追加

--- a/感想.md
+++ b/感想.md
@@ -74,3 +74,8 @@
 
 <blockquote class="twitter-tweet"><p lang="ja" dir="ltr">こういうの機械学習始めたころの初心思い出すな<br>「モザイク除去から学ぶ　最先端のディープラーニング (書籍版（A4・195ページ　一部カラー）＋電子版（フルカラー・すぐDL可）)」を じゅ～しぃ～すくりぷと で購入しました！ <a href="https://t.co/709cpMu8NN">https://t.co/709cpMu8NN</a> <a href="https://twitter.com/hashtag/booth_pm?src=hash&amp;ref_src=twsrc%5Etfw">#booth_pm</a></p>&mdash; きしもと (@unpuy_tw) <a href="https://twitter.com/unpuy_tw/status/1258688441539125249?ref_src=twsrc%5Etfw">May 8, 2020</a></blockquote> 
 
+<blockquote class="twitter-tweet"><p lang="ja" dir="ltr">こしあん先生のモザイク本、とても良かった…</p>&mdash; tko5tko (@tkooooo03) <a href="https://twitter.com/tkooooo03/status/1267450475915272193?ref_src=twsrc%5Etfw">June 1, 2020</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="ja" dir="ltr">あの期間で一人であそこまで仕上げるのは天才かな？とは思いますが、それとは別に僕を使ってステマするのはやめましょう <a href="https://twitter.com/hashtag/Peing?src=hash&amp;ref_src=twsrc%5Etfw">#Peing</a> <a href="https://twitter.com/hashtag/%E8%B3%AA%E5%95%8F%E7%AE%B1?src=hash&amp;ref_src=twsrc%5Etfw">#質問箱</a> <a href="https://t.co/fBSKQw0Y1i">https://t.co/fBSKQw0Y1i</a></p>&mdash; ふぁむたろう (@fam_taro) <a href="https://twitter.com/fam_taro/status/1267386824432816128?ref_src=twsrc%5Etfw">June 1, 2020</a></blockquote> 
+
+<blockquote class="twitter-tweet"><p lang="ja" dir="ltr">「モザイク除去から学ぶ 最先端のディープラーニング」( ( <a href="https://t.co/ERpU65XhZV">https://t.co/ERpU65XhZV</a> )では「超解像問題としてのモザイク除去の限界」も、個人的には気になっていたため、興味深かったです。一ページ未満の項目ですが、ていねいに前提の超解像を説明したうえで、要点をまとめた解説が。</p>&mdash; allowfirm (@allowfirm) <a href="https://twitter.com/allowfirm/status/1267452217172193280?ref_src=twsrc%5Etfw">June 1, 2020</a></blockquote>
